[tool.poetry]
name = "s3-bench"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "s3_bench"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
